src/index.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');

/* base styles */
* {
  margin: 0;
  font-family: "Quicksand";
  color: #fff;
}

body {
  background-color: #111;
}

.navbar {
  padding: 20px;
  display: flex;
  align-items: center;
  max-width: 100%;
  margin: 0 auto;
  border-bottom: 1px solid #f2f2f2;
  position: sticky;
}

.navbar-docs{
  border: 1px solid #EA3B3B;
}

.navbar h1 {
  color: #EA3B3B;
}

.logo {
  height: 25px;
}

.navbar .logo {
  margin-right: auto;
}

.links {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-left: auto;
}

.links a {
  margin-left: 16px;
  text-decoration: none;
  padding: 6px;
  transition: all .1s;
}

.links a:hover {
  color: #EA3B3B;
}

.menu-icon {
  display: none;
  color: #fff;
  cursor: pointer;
  font-size: 20px;
  transition: color 0.3s ease;
}

.menu-icon.open {
  color: #EA3B3B;
}


/* Home */

.home-page {
  padding: 2rem;
}

.hero-section {
  background-image: url('./assets/hero.jpg');
  background-size: cover;
  background-position: center;
  height: 60vh;
  display: flex;
  padding-top: 200px;
  flex-direction: column;
  text-align: center;
  color: white;
 
}

.hero-title {
  font-size: 3rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
}

.hero-subtitle {
  text-transform: uppercase;
  font-size: 1rem;
  margin-left: 25rem ;
  margin-right: 25rem;
  margin-bottom: 2rem;
}


.orange-button {
  background-color: #EA3B3B;
  color: white;
  border: none;
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  border-radius: 4px;
  cursor: pointer;
  margin-right: 1rem;
  text-decoration: none; 
  display: inline-block; 
  box-shadow: 2px 2px  #3a383858;
  transition: all .2s;

}

.orange-button:hover {
  transform: translateY(2%);
}

.orange-button:last-child {
  margin-right: 0;
}


.why-should-we-do-this {
  display: flex;
  align-items: flex-start;
  padding: 2rem;
  border-radius: 4px;
}

.image-container {
  margin-right: 2rem;
}

.why-should-we-do-this{
  display: flex;
  justify-content: center;
  align-items: center;
}

.why-should-we-do-this img {
  margin-left: 60%;
  margin-top: 20%;
  height: 400px;
}

.content {
  display: flex;
  flex-direction: column;
  margin-left: 25%;
}

.title {
  font-size: 2rem;
  margin-bottom: 1rem;
}

.description {
  font-size: 1.2rem;
  margin-bottom: 2rem;
}

.benefits {
  margin-top: 1rem;
}

.benefits-title {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

.benefits-list {
  padding: 0;
  margin: 0;
}

.benefit-item {
  font-size: 1.1rem;
  margin-bottom: 0.5rem;
}

.contributors-section {
  display: flex;
  align-items: center;
  margin-top: 2rem;
}

.image-container-contributors{
  margin-right: 30%;
}

.image-container-contributors-desktop{
  display: none;
}

.content-contributors {
  display: flex;
  flex-direction: column;
  margin-top: 8%;
  margin-right: 2rem;
}

.m-1{
  margin-left: 20%;
}
.btn-orange{
  background-color: #EA3B3B;
  color: white;
  border: none;
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  border-radius: 4px;
  cursor: pointer;
  margin-right: 1rem;
  text-decoration: none; 
  display: inline-block; 
  box-shadow: 2px 2px  #3a383858;
  transition: all .2s;
}

.btn-orange:hover {
  transform: translateY(2%);
}

/* not found */

.not-found {
  text-align: center;
  padding-top: 8%;
  height: 60vh;


}

.not-found h1 {
  text-transform: uppercase;
  font-size: 72px;
  color: #EA3B3B;
}

.not-found h4 {
  font-size: 50px;
  color: #EA3B3B;
}

.not-found p {
  font-size: 24px;
  color: #666;
}

.p-1 {
  margin-top: 20px;
}


/* card */

.card-container {
  margin-top: 30px;
  margin-bottom: 30px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
}

.card {
  width: 300px;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 8px;
  text-align: center;
}

.card img {
  width: 100%;
  max-height: 200px;
  object-fit: cover;
  border-radius: 8px;
  margin-bottom: 10px;
}

.card h3 {
  font-size: 20px;
  margin-bottom: 10px;
}

.card p {
  margin-bottom: 10px;
}

.card a {
  display: block;
  margin-bottom: 5px;
  color: #EA3B3B;
  text-decoration: none;
}

.card a:hover {
  text-decoration: underline;
}

/* Docs */

.documentation-container {
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
  background-color: #111;
  color: #333;
}

.documentation-container h1 {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 20px;
}

.documentation-container h2 {
  font-size: 20px;
  font-weight: bold;
  margin-top: 30px;
  margin-bottom: 10px;
}

.documentation-container p {
  margin-bottom: 10px;
}

.documentation-container ol,
.documentation-container ul {
  margin-left: 30px;
  margin-bottom: 10px;
}

.documentation-container code {
  font-family: 'Courier New', Courier, monospace;
  background-color: #111;
  padding: 2px 4px;
  border-radius: 4px;
}

.documentation-container .feature-list li {
  margin-bottom: 5px;
}

.documentation-container .contribution-steps li {
  margin-bottom: 5px;
}

.code {
  color: #EA3B3B;
}

.data{
  display: flex;
}

/* 
search bar
*/

/* companies-simple-style.css */

.card {
  border: 1px solid #ccc;
  border-radius: 8px;
  padding: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.card img {
  width: 100%;
  max-height: 200px;
  object-fit: cover;
  border-radius: 8px;
}

.card h3 {
  margin-top: 10px;
  font-size: 18px;
}

.card p {
  margin: 10px 0;
  font-size: 14px;
}

.card a {
  display: block;
  margin: 5px 0;
  color: #EA3B3B;
  text-decoration: none;
}

.card a:hover {
  text-decoration: underline;
}

.search-bar input {
  padding: 10px;
  width: 100%;
  font-size: 16px;
  color: #333;
  border: 1px solid #ccc;
  border-radius: 4px;
}


/* Footer */

.footer {
  display: flex;
  justify-content: center;
  background-color: #EA3B3B;
  padding: 10px;
  text-transform: uppercase;
  font-size: large;
}

.footer-box {
  margin: 20px;
  text-align: center;
}

.footer-contact {
  padding: 10px;
}

.footer-icons {
  padding-bottom: 10px;
}

.footer-icons-items {
  padding: 10px;
}

::selection{
  color: #fff;
  background-color: #EA3B3B;
}

@media (max-width: 768px) {

  .navbar {
    padding: 10px;
    justify-content: space-between;
  }

  .navbar h1 {
    font-size: 1.2rem;
  }

  .links {
    display: none;
  }

  .links.active {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 100%;
    right: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.9);
    padding: 10px;
    transition: all 0.3s ease;
  }

  .links a {
    margin: 5px 15px;;
  }

  .menu-icon {
    display: block;
  }
  
  .home-page{
    padding: 0;
  }

  .hero-subtitle {
    margin-left: 0;
    margin-right: 0;
  }
  
  .why-should-we-do-this {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
  
  .image-container {
    margin-right: 0;
    margin-bottom: 1rem;
  }
  
  .why-should-we-do-this img {
    margin-left: 0;
    margin-top: 0;
    height: auto;
  }

  .benefits-list{
    text-align: left;
  }

  .m-1{
    margin: -70px -40px 0 -20px;
  }

  .image-container-contributors{
    display: none;
  }
  
  .content {
    margin-left: 0;
  }
  
  .card-container {
    justify-content: center;
  }

  .why-should-we-do-this img {
    height: 300px;
    display: flex;
    align-items: center;
  }

  .image-container-contributors-desktop{
    display: contents;
    display: flex;
    justify-content: center;
    margin-bottom: 40px;
  }
  
  .footer {
    flex-direction: column;
    align-items: center;
  }
  
  .footer-box {
    margin: 10px;
  }
  
  .mobile {
    display: block;
  }
}


@media (min-width: 769px) and (max-width: 1024px) {
  .navbar {
    padding: 10px;
    justify-content: space-between;
  }

  .navbar h1 {
    font-size: 1.2rem;
  }

  .links {
    display: none;
  }

  .links.active {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 100%;
    right: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.9);
    padding: 10px;
    transition: all 0.3s ease;
  }

  .links a {
    margin: 5px 15px;;
  }

  .menu-icon {
    display: block;
  }
  

}

